@@ -39,7 +39,9 @@ int socket_accept6(int s,char* ip,uint16* port,uint32* scope_id);
 ssize_t socket_recv4(int s,char* buf,size_t len,char* ip,uint16* port);
 ssize_t socket_recv6(int s,char* buf,size_t len,char* ip,uint16* port,uint32* scope_id);
 ssize_t socket_send4(int s,const char* buf,size_t len,const char* ip,uint16 port);
+ssize_t socket_send4_flag(int s,const char* buf,size_t len,const char* ip,uint16 port,int flags);
 ssize_t socket_send6(int s,const char* buf,size_t len,const char* ip,uint16 port,uint32 scope_id);
+ssize_t socket_send6_flag(int s,const char* buf,size_t len,const char* ip,uint16 port,uint32 scope_id,int flags);
 int socket_local4(int s,char* ip,uint16* port);
 int socket_local6(int s,char* ip,uint16* port,uint32* scope_id);
 int socket_remote4(int s,char* ip,uint16* port);
@@ -60,7 +62,7 @@ int socket_mchopcount6(int s,char hops);
 int socket_mcloop4(int s,char loop);
 int socket_mcloop6(int s,char loop);
 
-/* please note that these are platform specific.  Do not expect them to
+/* Please note that these are platform specific.  Do not expect them to
  * work.  You might still get an accept() signalled even though there is
  * no data available.  So far, DATAIN is supported on FreeBSD and Linux,
  * and HTTPIN is supported on FreeBSD. */
@@ -77,6 +79,24 @@ const char* socket_getifname(uint32 _interface);
 uint32 socket_getifidx(const char* ifname);
 
 extern int noipv6;
+
+
+/* if HAVE_SOCKET_FASTOPEN is #defined, your version of libowfat
+ * has socket_fastopen, socket_fastopen_connect4,
+ * socket_fastopen_connect6 and socket_quickack */
+#define HAVE_SOCKET_FASTOPEN
+
+/* Turn on server-side TCP fast open support (0 success, -1 error) */
+int socket_fastopen(int s);
+
+/* Turn quick ack mode on or off for the socket s. */
+int socket_quickack(int s,int value);
+
+/* For client-side TCP fast open, connect and sending the first data is
+ * just one step, so we need an API to do it in one step */
+ssize_t socket_fastopen_connect4(int s,const char* ip,uint16 port,const char* buf,size_t len);
+ssize_t socket_fastopen_connect6(int s,const char* ip,uint16 port,uint32 scope_id,const char* buf,size_t len);
+
 
 #ifdef __MINGW32__
 #include <winsock2.h>
