@@ -51,4 +51,4 @@ effect as first calling socket_bind6 with IP address :: and port 0.
   socket_connect6(s,ip,p,0);
 
 .SH "SEE ALSO"
-socket_connect4(3), socket_getifname(3)
+socket_connect4(3), socket_fastopen_connect6(3), socket_getifname(3)
